// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings reducer handles SETTINGS_SET_VALUE 1`] = `
Object {
  "notifications": true,
}
`;

exports[`settings reducer has an initial state 1`] = `
Object {
  "notifications": false,
}
`;
